--- a/src/db.properties
+++ b/src/db.properties
@@ -1,5 +1,5 @@
 #mysql jdbc
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/db_city?useUnicode=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://localhost:3306/db_city?useSSL=false&useUnicode=true&characterEncoding=UTF-8
 jdbc.uid=root
-jdbc.pwd=123456
+jdbc.pwd=root
